Finished landing page, fixed column spacing of form at bottom, added new icons from 'the noun project' and fixed sources drop down so they open in a new tab

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,7 +1,7 @@
 @import "twitter/bootstrap/bootstrap";
 body {padding-top: 50px;}
 .well{margin-bottom: -2px;}
-hr {margin:1px 0px 1px 0px;}
+hr {margin:10px 0px 10px 0px;}
 @import "twitter/bootstrap/responsive";
 
 // Set the correct sprite paths
